--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -105,6 +105,124 @@ body {
 
 .share-button:hover .share__link:nth-of-type(4) {
   transition-delay: 0.4s;
+}
+
+body {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  max-width: 100%;
+  font-family: "Gaegu", cursive;
+}
+
+main,
+footer {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  padding: 2em;
+  font-family: "Gaegu", cursive;
+  background-color: #fff;
+  font-size: 1.4em;
+}
+
+h1 {
+  font-family: "Sacramento", cursive;
+  font-size: 2em;
+}
+
+a:link {
+  color: #fdac5b;
+}
+
+a:visited {
+  color: #cc9aff;
+}
+
+a:focus,
+a:hover {
+  color: #8419f0;
+  text-decoration: none;
+}
+
+.mistery-presentation {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  padding: 1em;
+  background-color: #fff;
+  max-width: 70%;
+  margin: 0;
+}
+
+.mistery-logo {
+  max-width: 100px;
+  display: block;
+  margin: 0;
+}
+
+.mistery-table {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+table {
+  border: 2px solid #dfdfdf;
+  overflow-x: auto;
+  color: #333;
+  border-collapse: collapse;
+}
+
+td {
+  background-color: #cc9aff;
+  width: 4em;
+  height: 4em;
+  transform: all 0.4s ease-in-out;
+  border: 2px solid #000;
+  padding: 10px;
+  text-align: center;
+}
+
+td:nth-of-type(odd) {
+  background-color: #f8bf86;
+}
+
+tr:nth-of-type(even) td:nth-of-type(odd) {
+  background-color: #cc9aff;
+}
+
+tr:nth-of-type(even) td:nth-of-type(even) {
+  background-color: #f8bf86;
+}
+
+.button {
+  background-color: transparent;
+  border: 4px double #000;
+  transition: all 0.4s ease-in-out;
+  font-family: "Gaegu", cursive;
+}
+
+.button:focus,
+.button:hover {
+  border-color: #fff;
+}
+
+th {
+  background-color: #cc9aff;
+  border: 2px solid black;
+  padding: 10px;
+  font-family: "Sacramento", cursive;
+}
+
+.ruby {
+  background-image: url(https://s19.postimg.cc/jtzq4yhgz/ruby_small.png);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.credits {
+  margin-top: 1em;
 }
 
 #contact h1 {
