--- a/css/styles.css
+++ b/css/styles.css
@@ -118,12 +118,12 @@ footer {
   font-size: 1.4em;
 }
 
-/*h1 {
+h1 {
   font-family: "Sacramento", cursive;
   font-size: 2em;
 }
 
-a:link {
+/*a:link {
   color: #fdac5b;
 }
 
