--- a/css/styles.css
+++ b/css/styles.css
@@ -147,13 +147,13 @@ a:hover {
   margin: 0;
 }
 
-/*.mistery-logo {
+.mistery-logo {
   max-width: 100px;
   display: block;
   margin: 0;
 }
 
-.mistery-table {
+/*.mistery-table {
   display: flex;
   flex-flow: column wrap;
 }
