--- a/css/styles.css
+++ b/css/styles.css
@@ -183,11 +183,11 @@ tr:nth-of-type(even) td:nth-of-type(odd) {
   background-color: #cc9aff;
 }
 
-/*tr:nth-of-type(even) td:nth-of-type(even) {
+tr:nth-of-type(even) td:nth-of-type(even) {
   background-color: #f8bf86;
 }
 
-.button {
+/*.button {
   background-color: transparent;
   border: 4px double #000;
   transition: all 0.4s ease-in-out;
