--- a/css/styles.css
+++ b/css/styles.css
@@ -194,12 +194,12 @@ tr:nth-of-type(even) td:nth-of-type(even) {
   font-family: "Gaegu", cursive;
 }
 
-/*.button:focus,
+.button:focus,
 .button:hover {
   border-color: #fff;
 }
 
-th {
+/*th {
   background-color: #cc9aff;
   border: 2px solid black;
   padding: 10px;
